fix inline-block spacing issue

--- a/src/css/network.less
+++ b/src/css/network.less
@@ -34,6 +34,10 @@ body.network-communities {
     overflow: hidden;
     margin-bottom: @std-padding*2;
 
+    .background-wrapper {
+      font-size: 0; // inline-block spacing fix
+    }
+
     .background {
       .fluid-height(38.2%);
       > div {
